--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="about-right">
               <h2>About Me</h2>
               <h6>Full Stack Developer</h6>
-              <p>I <span>design and develop</span> services for customers Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. </p>
+              <p>Hello <span> I am Abinaya</span> I am currently pursuing my Master of Computer Applications at NMCC Marthandam. I have completed my Bachelor of  Computer Science, where I gained a solid foundation in programming, algorithms, and software development. Currently, I am doing an internship where I am enhancing my skills in full-stack development and gaining practical experience in building real-world applications. I am passionate about technology and always eager to learn and grow in the field of software development </p>
               <div class="row">
                 <div class="col-md-6">
                   <table>
@@ -98,7 +98,7 @@
                   <table>
                     <tr>
                       <th>Email :</th>
-                      <td>abinaya@gmail.com</td>
+                      <td>abinayaabim2003@gmail.com</td>
                     </tr>
                     <tr>
                       <th>Phone :</th>
@@ -198,7 +198,7 @@
                           <i class="far fa-dot-circle text-dark position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
                           <h5 class="font-weight-bold mb-1">Intenship</h5>
                           <p class="mb-2"><strong>Edure</strong> | <small> Excellent</small></p>
-                          <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                          <p>This internship allows me to apply my academic knowledge to real-world projects, and I am excited to continue learning and growing in the field of software development.</p>
                       </div>
                       <div class="position-relative ex-me mb-4">
                           <i class="far fa-dot-circle text-dark position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
@@ -238,7 +238,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12">
           <div class="portfolio-section">
-            <a href=" https://abiabi12345.github.io/shoes/"><img src="branding-3.jpg"></a>
+            <a href=" https://abiabi12345.github.io/shoes/"><img src="images.jpg"></a>
           </div>
         </div>
       </div>
